# bms

./: CMakeLists.txt
doc/: architecture.md  event-storming.md  project-description.md
src/: CMakeLists.txt  main.c
src/Core/Src/: main.c
src/aaa/: packet_bin_builder.c
src/app/startup/: hal_startup.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
src/gateway/config/: config.c  config.h  config_builder.h  simple_config_builder.c
src/gateway/controller_data/: controller_data.c  controller_data.h
src/gateway/server/: bin_packet_builder.c  packet_builder.h  server.c  server.h  txt_packet_builder.c
src/gateway/updater/: updater.c  updater.h
src/infra/nvmem/: nvmem.c
src/infra/server_protocol/: server_protocol.c
src/infra/system/: system.c
src/interface/datetime/: datetime.h
src/interface/modbus/: modbus.h  modbus_define.h
src/interface/nvmem/: nvmem.h
src/interface/server_protocol/: server_protocol.h
src/interface/system/: system.h
src/modbus/: modbus_mock.c
src/records/: records.c  records.h
src/server/: builder.h  console_builder.c  packet_bin_builder.c
src/updater/: updater.c  updater.h
src/utils/: timestamp.h  timestamp_mock.c
test/poc/controller_data/: CMakeLists.txt  datetime_mock.c  main.c  modbus_mock.c  nvmem_mock.c  server_protocol_mock.c  server_protocol_mock.h  system_mock.c
test/unit_test/test/: CMakeLists.txt  main.c
